2009-02-04  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Vendor/Ubuntu.pm: Ubuntu vendor object implementing
	lookup of launchpad bugs in changelogs and a safety-check for
	Maintainer fields of forked packages (launched during source
	build).
	* scripts/Makefile.am (EXTRA_DIST): Add
	'scripts/Dpkg/Vendor/Ubuntu.pm'.
	* scripts/po/POTFILES.in: Add 'scripts/Dpkg/Vendor/Ubuntu.pm'.

2009-02-04  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Vendor/Default.pm: Generic vendor object that will
	be used to hook vendor-specific behaviour in multiple places.
	* scripts/Dpkg/Vendor/Debian.pm: Debian variant of that object.
	* scripts/Dpkg/Vendor.pm (get_vendor_object, run_vendor_hook):
	New functions to retrieve the current vendor object and run
	vendor-specific code.
	* scripts/dpkg-source.pl, scripts/dpkg-genchanges.pl: Add first
	vendor hooks to be used by Ubuntu.
	* scripts/Makefile.am (EXTRA_DIST): Add
	'scripts/Dpkg/Vendor/Default.pm' and
	'scripts/Dpkg/Vendor/Debian.pm'.

2009-01-29  Guillem Jover  <guillem@debian.org>

	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'dpkg-test.h'.
	* libcompat/Makefile.am (libcompat_a_SOURCES): Add 'compat.h'.
	* man/Makefile.am (EXTRA_DIST): Add 'po/ChangeLog'.

2009-01-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/t/900_Dpkg_Version.t: Renamed into...
	* scripts/t/100_Dpkg_Version.t: and merged test cases previously
	provided by this file so that there's no loss of tests. Also
	adjusted test cases to match the change below.
	* scripts/Dpkg/Version.pm (compare_versions): Handle "<" like "<="
	and ">" like ">=" in order to be consistent with dpkg
	--compare-versions. Emit warnings when they are used as they are
	deprecated.
	* scripts/Makefile.am: Drop scripts/t/900_Dpkg_Version.t from the
	set of extra files to distribute.
	* scripts/dpkg-genchanges.pl: Use "<<" instead of ambiguous "<" in
	version comparison.

2009-01-22  Guillem Jover  <guillem@debian.org>
