@@ -112,6 +112,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Add Ubuntu vendor object implementing lookup of launchpad bugs in
     changelogs and a safety-check for Maintainer fields of forked packages
     (launched during source build). Closes: #426752, #499924
+  * Improve behaviour of update-alternatives --config. Thanks to
+    Osamu Aoki <osamu@debian.org> for the initial patch.
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
