@@ -1,3 +1,14 @@
+2009-02-05  Raphael Hertzog  <hertzog@debian.org>
+	    Osamu Aoki <osamu@debian.org>
+
+	* scripts/update-alternatives.pl: Allow --config to continue when
+	the currently selected alternative doesn't match the only existing
+	one. Useful to be able to recover from a broken configuration.
+	Also offer the choice in --config mode to go back the automatic
+	mode. Add a new --skip-auto option to combine with --all and
+	easily review manual and broken alternatives.
+	* man/update-alternatives.8: Update the documentation accordingly.
+
 2009-02-04  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Vendor/Ubuntu.pm: Ubuntu vendor object implementing
